--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -22,3 +22,9 @@ body {
 	font-size: 1.6rem;
 	color: #555;
 }
+
+.container {
+	max-width: 80rem;
+	margin-inline: auto;
+	padding: 5.2rem 2.4rem 4.8rem 2.4rem;
+}
