--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -21,10 +21,12 @@ body {
 	font-family: 'Source Sans 3', sans-serif;
 	font-size: 1.6rem;
 	color: #555;
+
+	background: #fafafa;
 }
 
 .container {
-	max-width: 80rem;
+	max-width: 120rem;
 	margin-inline: auto;
 	padding: 5.2rem 2.4rem 4.8rem 2.4rem;
 }
