successful implementation of masonry layout for modelgrid

--- a/src/styles/components/_ModelGrid.module.scss
+++ b/src/styles/components/_ModelGrid.module.scss
@@ -1,5 +1,13 @@
 @import 'styles/base';
 
+.grid {
+	display: grid;
+	justify-content: center;
+	grid-template-columns: repeat(auto-fit, 35rem);
+
+	gap: 2.4rem;
+}
+
 .card {
 	max-width: 35rem;
 
