--- a/src/styles/components/_Header.module.scss
+++ b/src/styles/components/_Header.module.scss
@@ -1,3 +1,5 @@
+@import 'styles/base';
+
 .header {
 	letter-spacing: 0.2px;
 
@@ -5,6 +7,8 @@
 	grid-template-columns: 1fr auto;
 	align-items: center;
 	gap: 2.4rem;
+
+	margin-bottom: 5.2rem;
 
 	h2 {
 		color: rgb(32, 33, 36);
@@ -27,9 +31,7 @@
 		background: rgb(32, 33, 36);
 		color: #fff;
 
-		display: flex;
-		align-items: center;
-		gap: 0.6rem;
+		@include centered-flex(0.6rem);
 
 		svg {
 			width: 1.6rem;
@@ -39,11 +41,10 @@
 
 	.illustration svg {
 		width: 35rem;
-		height: 35rem;
+		height: auto;
 
 		@media (max-width: 1200px) {
 			width: 33rem;
-			height: 33rem;
 		}
 	}
 
