--- a/src/styles/components/_ModelGrid.module.scss
+++ b/src/styles/components/_ModelGrid.module.scss
@@ -3,20 +3,22 @@
 .grid {
 	display: grid;
 	justify-content: center;
-	grid-template-columns: repeat(auto-fit, 35rem);
+	grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
 
 	gap: 2.4rem;
 }
 
 .card {
-	max-width: 35rem;
-
 	border-radius: 35px;
 	background-color: #fff;
 	padding: 4.8rem 3.2rem 3.2rem;
 
 	cursor: pointer;
 	box-shadow: rgba(0, 0, 0, 0.05) 0px 0px 0px 1px;
+
+	@media (max-width: 800px) {
+		transform: translateY(0) !important;
+	}
 }
 
 .name {
