--- a/src/styles/components/_FeaturedModels.module.scss
+++ b/src/styles/components/_FeaturedModels.module.scss
@@ -8,7 +8,7 @@
 			font-size: 2.2rem;
 			font-weight: 600;
 			letter-spacing: 0.2px;
-			color: rgb(32, 33, 36);
+			color: $primary;
 		}
 
 		svg {
