--- a/src/styles/components/_Header.module.scss
+++ b/src/styles/components/_Header.module.scss
@@ -11,12 +11,11 @@
 	margin-bottom: 5.2rem;
 
 	h2 {
-		color: rgb(32, 33, 36);
+		color: $primary;
 		font-size: 4.4rem;
 	}
 
 	p {
-		color: rgb(95, 99, 104);
 		font-size: 1.8rem;
 		line-height: 1.3;
 		margin-block: 0.6rem 2rem;
@@ -28,8 +27,8 @@
 		padding: 1rem 2rem;
 		border-radius: 80px;
 
-		background: rgb(32, 33, 36);
-		color: #fff;
+		background: $primary;
+		color: $secondary;
 
 		@include centered-flex(0.6rem);
 
