--- a/src/styles/components/_ModelGrid.module.scss
+++ b/src/styles/components/_ModelGrid.module.scss
@@ -10,7 +10,7 @@
 
 .card {
 	border-radius: 35px;
-	background-color: #fff;
+	background-color: $secondary;
 	padding: 4.8rem 3.2rem 3.2rem;
 
 	cursor: pointer;
@@ -29,7 +29,7 @@
 }
 
 .category {
-	color: #777;
+	color: $text-dim;
 	font-size: 1.5rem;
 }
 
