--- a/src/styles/components/_AllModels.module.scss
+++ b/src/styles/components/_AllModels.module.scss
@@ -1,3 +1,5 @@
+@import 'styles/base';
+
 .models {
 	position: relative;
 
@@ -11,5 +13,16 @@
 		height: 1px;
 
 		background-color: #e5e5e5;
+	}
+
+	& > header {
+		margin-bottom: 2.4rem;
+
+		p {
+			font-size: 2.4rem;
+			font-weight: 600;
+			color: $primary;
+			letter-spacing: 0.2px;
+		}
 	}
 }
