--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -32,6 +32,11 @@ button {
 	cursor: pointer;
 }
 
+a {
+	text-decoration: none;
+	color: inherit;
+}
+
 .container {
 	max-width: 120rem;
 	margin-inline: auto;
