--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -5,6 +5,7 @@ $text: #5f6368;
 $text-dim: #777;
 $primary: #202124;
 $secondary: #fff;
+$error: #ef8181;
 
 @mixin centered-flex($gap: 1.8rem) {
 	display: flex;
