--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -42,3 +42,10 @@ a {
 	margin-inline: auto;
 	padding: 12.8rem 2.4rem 15rem 2.4rem;
 }
+
+.error {
+	text-align: center;
+	font-weight: 600;
+	font-size: 1.8rem;
+	color: $error;
+}
