Implemented lazy loading

--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -51,9 +51,11 @@ textarea {
 }
 
 .loader {
-	text-align: center;
-	max-width: 100%;
-	margin-inline: auto;
+	min-height: 100vh;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
 	svg {
 		width: 5rem;
