--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -11,3 +11,20 @@ $secondary: #fff;
 	align-items: center;
 	gap: $gap;
 }
+
+@mixin page-container {
+	max-width: 120rem;
+	margin-inline: auto;
+	padding: 6.4rem 2.4rem 8rem 2.4rem;
+}
+
+@mixin button-styles($bg-color: $primary, $text-color: $secondary) {
+	font-weight: 600;
+	padding: 1rem 2rem;
+	border-radius: 80px;
+
+	background: $bg-color;
+	color: $text-color;
+
+	@include centered-flex(0.6rem);
+}
