--- a/src/styles/_general.scss
+++ b/src/styles/_general.scss
@@ -45,8 +45,7 @@ textarea {
 }
 
 .container {
-	max-width: 120rem;
-	margin-inline: auto;
+	@include page-container;
 	padding: 12.8rem 2.4rem 15rem 2.4rem;
 }
 
