--- a/src/styles/components/_ModelDetails.module.scss
+++ b/src/styles/components/_ModelDetails.module.scss
@@ -1,9 +1,7 @@
 @import 'styles/base';
 
 .container {
-	max-width: 120rem;
-	margin-inline: auto;
-	padding: 6.4rem 2.4rem 8rem 2.4rem;
+	@include page-container;
 }
 
 .model {
