--- a/src/styles/components/_ModelSpace.module.scss
+++ b/src/styles/components/_ModelSpace.module.scss
@@ -66,4 +66,22 @@
     margin-top: 4.8rem;
     white-space: pre-line;
     text-transform: capitalize;
+
+    h3 {
+        margin-bottom: 1.2rem;
+    }
+
+    ol {
+        margin-left: 3.2rem;
+
+        li:not(:last-child) {
+            margin-bottom: 0.4rem;
+        }
+
+        li:first-child {
+            font-weight: 600;
+            color: #2b8a3e;
+            font-size: 2.2rem;
+        }
+    }
 }
